@@ -3,8 +3,8 @@ package com.mtm.demo.interfaces;
 public class Test {
 
     public static void main(String[] args) {
-        Float f = new Float(3.1);
-        Integer i = new Integer(1);
+        Float f = Float.valueOf("3.1");
+        Integer i = Integer.valueOf(1);
         long l = 2;
         System.out.println("Result is: " + l + f + i);
     }
